# Algorithms

./: .gitignore
01_Sliding Window/LongestSubstringWithDifferentCharacters(middle)/: Task.txt  main.cpp
01_Sliding Window/MaxSummUndoArray(easy)/: Task.txt  main.cpp
02_Two Pointers/SquaringTheSortedArray(easy)/: Task.txt  main.cpp
02_Two Pointers/Triplets(medium)/: Task.txt  main.cpp
Binary Tree/: Node.h  Node.hpp  Tree.hpp  a.out  main.cpp
Cross triangles/: a.out  aeraOfTriangles.cpp  classes.cpp  classes.h
Cross triangles(3D)/: Makefile  a.out  aeraOfTriangles.cpp  classes.cpp  classes.h  line.cpp  line.h  line.hpp  main.cpp  poligon.cpp  poligon.h  polygon.cpp  polygon.h  polygon.hpp  sphere.cpp  sphere.h  sphere.hpp  triangle.cpp  triangle.h  triangle.hpp  vector.cpp  vector.h  vertex.h
Cross triangles(3D)/Tests/: 011.ans  test.txt  tmp
Cross triangles/Tests/: 005.ans  010.ans
MyVector/: Makefile  MyVector.h  MyVector.hpp  MyVectorBuf.hpp  MyVectorRaw.hpp  a.out  launch  main.cc
OpenMP/1st_hello_world/: 1st_hello_world.c  Makefile
OpenMP/2nd_summ/: 2nd_summ.c  Makefile  launch.sh
ParaCL/: CMakeLists.txt  Makefile  Node.cpp  Node.hpp  ParaCL  Parser.hpp  Test  a.out  compiler.cpp  compiler.cpp.h  compiler.output  compiler.y  eofTest.pcl  error.cpp  example.txt  lex.yy.c  main.cpp  main.pcl  parcer.l  parser.hpp  program  scanner.l  tmp  tmp.txt
ParaCL(old)/: Parser.hpp  main.cpp
ParaCL(old)/Tests/: FirstNfibonachi.pcl
ParaCL/DataSet/check/: 003  unexpSymb  wrongBraces  wrongInput  wrongMath
ParaCL/DataSet/output/: 005.out  008.out  errDecl.out  errDecl2.out  unexpOP.out  wrongScope.out
ParaCL/DataSet/tests/: unexpOP
ParaCL/Parser/: Makefile  fb1-5  fb1-5.l  fb1-5.tab.c  fb1-5.y  lex.yy.c
ParaCL/Tests/: FirstNfibonachi.pcl  opTest.pcl
ParaCL/lib/: CMakeLists.txt  Node.cpp  Node.hpp  compiler.cpp  compiler.y  error.cpp  parser.hpp  scanner.l
ParaCL/tests/: CMakeLists.txt
PointInTriangle/src/: main.c
PointInTriangle/tests/: 01
Prim_MST/: CMakeLists.txt  Readme.txt  launchCMake.sh
Prim_MST/src/: MST.cc  converter.cc
Prim_MST/test/input/: input000.txt  input001.txt  input002.txt
Prim_MST/test/output/: output000.txt  output001.txt  output002.txt
RocksInPocket/: input  main.cpp
Sort/: main.c  mainM.c
